# trainer

./: .clinerules  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  bacon.toml  install-trainer-squat-web-systemd.sh  watch-all-prev.sh  watch-all.sh  watch-run-server.sh
src/: main.rs
